[package]
name = "webrender_traits"
version = "0.1.0"
authors = ["Glenn Watson <gw@intuitionlibrary.com>"]

[dependencies.ipc-channel]
git = "https://github.com/servo/ipc-channel"

[dependencies]
offscreen_gl_context = {version = "0.1.1", features = ["serde_serialization"]}
app_units = "0.2.5"
euclid = "0.6.8"
gleam = "0.2.19"
serde = {version = ">=0.6, <0.8", features = ["nightly"]}
serde_macros = ">=0.6, <0.8"
byteorder = "0.5"

[target.x86_64-apple-darwin.dependencies]
core-graphics = ">=0.2, <0.4"
